# execution

./: Cargo.toml  README.md  symbols.txt
binance-api-integration/: Cargo.toml  README.md  config.json
binance-api-integration/src/: binance.rs  depth.rs  event.rs  main.rs  snapshot.rs  trade.rs
binance-api-integration/src/binance/: rest_api.rs  websocket_api.rs
clickhouse-integration/: Cargo.toml
clickhouse-integration/src/: main.rs
marketdata-player/: Cargo.toml  README.md
marketdata-player/src/: dataprovider.rs  main.rs  marketdataplayer.rs  orderbook.rs
src/: main.rs
