[package]
name = "binance-api-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
futures-util = "0.3.31"
serde_json = "1.0.128"
reqwest = "0.12.8"
chrono = "0.4.38"
libc = "0.2.161"
bincode = "1.3.3"
