[package]
name = "marketdata-player"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
clickhouse = "0.13.1"
fpdec = "0.11.0"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
statrs = "0.17.1"
tokio = { version = "1.41.1", features = ["full"] }
